oscen-macros/tests/ui/array_with_double_rate.stderr
error: node already has an embedded rate (`* N` or `/ N`) from the array literal; remove the trailing rate annotation
 --> tests/ui/array_with_double_rate.rs:7:63
  |
7 |         oscs = [PolyBlepOscillator::saw(440.0, 0.6); 4] * 2 * 4;  // conflict
  |                                                               ^

warning: unused import: `PolyBlepOscillator`
 --> tests/ui/array_with_double_rate.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator};
  |                    ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
